// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Include toc > Nested toc inclusions with mixed including modes > filelist 1`] = `
"[
  "product1/_includes/inc-hash.md",
  "product1/article1.md",
  "product1/toc.yaml",
  "product2/overlay1/_includes/inc-hash.md",
  "product2/overlay1/article1.md",
  "product2/overlay2/_includes/inc-hash.md",
  "product2/overlay2/article1.md",
  "product2/overlay3/_includes/inc-hash.md",
  "product2/overlay3/article1.md",
  "product2/p2.md",
  "product2/toc.yaml"
]"
`;

exports[`Include toc > Nested toc inclusions with mixed including modes 1`] = `"This is the core include."`;

exports[`Include toc > Nested toc inclusions with mixed including modes 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
sourcePath: product1/core/article1.md
vcsPath: product1/core/article1.md
---
This is the core content of Article 1.

{% include [x](_includes/inc-hash.md) %}
"
`;

exports[`Include toc > Nested toc inclusions with mixed including modes 2 > filelist 1`] = `
"[
  "toc.yaml"
]"
`;

exports[`Include toc > Nested toc inclusions with mixed including modes 2 1`] = `
"title: main
items:
  - name: toc_i/item
  - name: core/toc_m/item
  - name: overlay/toc_p/item
  - name: core/toc_i/item
  - name: test
    items:
      - name: core/concepts/toc_i/item
      - name: core/concepts/toc_p/item
path: toc.yaml
"
`;

exports[`Include toc > Nested toc inclusions with mixed including modes 3`] = `
"title: Product 1 title
items:
  - name: Article1
    href: article1.md
path: product1/toc.yaml
"
`;

exports[`Include toc > Nested toc inclusions with mixed including modes 4`] = `
"This is the core include.
"
`;

exports[`Include toc > Nested toc inclusions with mixed including modes 5`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
sourcePath: product2/overlay1/product/article1.md
vcsPath: product2/overlay1/product/article1.md
---
This is the overlay content of Article 1 for product 2.

{% include [x](_includes/inc-hash.md) %}
"
`;

exports[`Include toc > Nested toc inclusions with mixed including modes 6`] = `
"This is the core include.
"
`;

exports[`Include toc > Nested toc inclusions with mixed including modes 7`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
sourcePath: product2/overlay2/product/article1.md
vcsPath: product2/overlay2/product/article1.md
---
This is the overlay number #2  of Article 1 content for product 2.

{% include [x](_includes/inc-hash.md) %}
"
`;

exports[`Include toc > Nested toc inclusions with mixed including modes 8`] = `
"This is the core include.
"
`;

exports[`Include toc > Nested toc inclusions with mixed including modes 9`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
sourcePath: product2/core/article1.md
vcsPath: product2/core/article1.md
---
This is the core content of Article 1.

{% include [x](_includes/inc-hash.md) %}
"
`;

exports[`Include toc > Nested toc inclusions with mixed including modes 10`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: product2/p2.md
sourcePath: product2/p2.md
---
This is the product 2 specific article.

Check here link to [Article1 overlay 1](overlay1/article1.md)
Check here link to [Article1 overlay 2](overlay2/article1.md)"
`;

exports[`Include toc > Nested toc inclusions with mixed including modes 11`] = `
"title: Product 2 title
items:
  - name: P2 Article
    href: p2.md
  - name: Overlay1
    items:
      - name: Article1
        href: overlay1/article1.md
  - name: Overlay 2
    items:
      - name: Article1
        href: overlay2/article1.md
  - name: Overlay 3
    items:
      - name: Article1
        href: overlay3/article1.md
path: product2/toc.yaml
"
`;

exports[`Include toc > Toc is included in link mode > filelist 1`] = `
"[
  "a1.md",
  "folder1/a1.md",
  "folder1/folder2/a1.md",
  "toc.yaml"
]"
`;

exports[`Include toc > Toc is included in link mode 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: a1.md
sourcePath: a1.md
---
This is the /a1.md file content.
"
`;

exports[`Include toc > Toc is included in link mode 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: folder1/a1.md
sourcePath: folder1/a1.md
---
This is the /folder1/a1.md file content.
"
`;

exports[`Include toc > Toc is included in link mode 3`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: folder1/folder2/a1.md
sourcePath: folder1/folder2/a1.md
---
This is the /folder1/folder1/a1.md file content.
"
`;

exports[`Include toc > Toc is included in link mode 4`] = `
"items:
  - name: A1
    href: a1.md
  - name: folder1
    items:
      - name: A1
        href: folder1/a1.md
      - name: folder1
        items:
          - name: A1
            href: folder1/folder2/a1.md
path: toc.yaml
"
`;

exports[`Include toc > Toc is included inline, not as a new section > filelist 1`] = `
"[
  ".yfm",
  "file1.md",
  "fileA.md",
  "fileB.md",
  "fileC.md",
  "fileX.md",
  "toc.yaml"
]"
`;

exports[`Include toc > Toc is included inline, not as a new section 1`] = `
"applyPresets: true
"
`;

exports[`Include toc > Toc is included inline, not as a new section 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: file1.md
sourcePath: file1.md
---
# File 1
"
`;

exports[`Include toc > Toc is included inline, not as a new section 3`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
sourcePath: folder/fileA.md
title: File A
description: YFM description
vcsPath: folder/fileA.md
---
# File A

---

Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.

---
"
`;

exports[`Include toc > Toc is included inline, not as a new section 4`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
sourcePath: folder/fileB.md
vcsPath: folder/fileB.md
---
# File B

Lorem Ipsum is simply dummy text of the printing and typesetting industry.

---

Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.

---
"
`;

exports[`Include toc > Toc is included inline, not as a new section 5`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
sourcePath: folder/folder/fileC.md
vcsPath: folder/folder/fileC.md
---
# File C
"
`;

exports[`Include toc > Toc is included inline, not as a new section 6`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: fileX.md
sourcePath: fileX.md
---
# File X
"
`;

exports[`Include toc > Toc is included inline, not as a new section 7`] = `
"items:
  - name: Name1
    href: file1.md
  - name: NameA
    href: fileA.md
  - name: NameB
    href: fileB.md
  - name: NameC
    href: fileC.md
  - name: NameX
    href: fileX.md
path: toc.yaml
"
`;

exports[`Include toc > Toc root merge on non root dir > filelist 1`] = `
"[
  ".yfm",
  "ru/index.yaml",
  "ru/toc.yaml"
]"
`;

exports[`Include toc > Toc root merge on non root dir 1`] = `
"allowHtml: true
"
`;

exports[`Include toc > Toc root merge on non root dir 2`] = `
"blocks:
  - type: header-block
    title: Title
    description: Description
links: []
meta:
  metadata:
    - name: generator
      content: Diplodoc Platform vDIPLODOC-VERSION
  sourcePath: ru/sub/folder/index.yaml
  canonical: ru/index
  alternate: []
  vcsPath: ru/sub/folder/index.yaml
"
`;

exports[`Include toc > Toc root merge on non root dir 3`] = `
"title: Toc
items:
  - name: sub-page
    href: index.yaml
path: ru/toc.yaml
"
`;

exports[`Include toc > Toc with expressions > filelist 1`] = `
"[
  "a1.md",
  "index.yaml",
  "toc.yaml"
]"
`;

exports[`Include toc > Toc with expressions 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: a1.md
sourcePath: a1.md
---
This is the /a1.md file content.
"
`;

exports[`Include toc > Toc with expressions 2`] = `
"title: Title A
description:
  - Desc A
meta:
  metadata:
    - name: generator
      content: Diplodoc Platform vDIPLODOC-VERSION
  title: Meta A
  vcsPath: index.yaml
  sourcePath: index.yaml
links:
  - title: A1
    description: A1 desc
    href: a1
"
`;

exports[`Include toc > Toc with expressions 3`] = `
"title: Title A
href: index.yaml
items:
  - name: A1
    href: a1.md
path: toc.yaml
"
`;

exports[`Include toc > Toc with generic includer > filelist 1`] = `
"[
  "test/index.md",
  "test/sub/sub-1.md",
  "test/sub/sub-2.md",
  "test/sub/sub/sub-3.md",
  "test/test.md",
  "toc.yaml"
]"
`;

exports[`Include toc > Toc with generic includer 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: test/index.md
sourcePath: test/index.md
---
# H1

[same level link](./test.md)
[inner link](./sub/sub-1.md)
"
`;

exports[`Include toc > Toc with generic includer 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: test/sub/sub-1.md
sourcePath: test/sub/sub-1.md
---
# H1

[same level link](./sub-2.md)
[outer link](../test.md)
[inner link](./sub/sub-3.md)
"
`;

exports[`Include toc > Toc with generic includer 3`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: test/sub/sub-2.md
sourcePath: test/sub/sub-2.md
---
# H1"
`;

exports[`Include toc > Toc with generic includer 4`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: test/sub/sub/sub-3.md
sourcePath: test/sub/sub/sub-3.md
---
# H1"
`;

exports[`Include toc > Toc with generic includer 5`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: test/test.md
sourcePath: test/test.md
---
# H1"
`;

exports[`Include toc > Toc with generic includer 6`] = `
"title: main
items:
  - name: test
    href: test/test.md
  - name: index
    href: test/index.md
  - name: sub
    items:
      - name: sub-2
        href: test/sub/sub-2.md
      - name: sub-1
        href: test/sub/sub-1.md
      - name: sub
        items:
          - name: sub-3
            href: test/sub/sub/sub-3.md
path: toc.yaml
"
`;
